--- a/src/github.com/hulaalol/gosm/web/style.css
+++ b/src/github.com/hulaalol/gosm/web/style.css
@@ -10,7 +10,7 @@ html, body, #container /*, and all other map parent selectors*/ {
 table {
   margin: 0 auto; /* or margin: 0 auto 0 auto */
   border-collapse: separate;
-  border-spacing: 10px;
+  /* border-spacing: 10px; */
   text-align: center;
   word-wrap: break-word;
 
@@ -136,6 +136,11 @@ table {
     height: 100%;
   }
 
+  #finishWindow{
+    width: 100%;
+    height: 100%;
+  }
+
   #questionWindowContainer{
   width: 40%;
   height: 30%;
@@ -203,6 +208,28 @@ table {
       line-height: 26px; 
       text-indent: 30px; 
       }
+
+      #finishWindowContainer{
+        width: 40%;
+        height: 30%;
+        left: 5%;
+        top: 20%;
+        position: absolute;
+        z-index: 10000;
+        pointer-events: auto;
+        visibility: hidden;
+      
+        padding: 10px;
+        border: 2px solid #FFF;
+        border-radius: 15px;
+        -moz-border-radius: 15px;
+        background-image: linear-gradient( 10deg, #085078, #85d8ce );
+        
+        color: #f6fbff; 
+        font-family: 'Lucida Sans', Arial, sans-serif; 
+        line-height: 26px; 
+        text-indent: 30px; 
+        }
 
 
     #distanceDisplay{
