--- a/src/github.com/hulaalol/gosm/web/style.css
+++ b/src/github.com/hulaalol/gosm/web/style.css
@@ -14,6 +14,8 @@ table {
   text-align: center;
   word-wrap: break-word;
 
+  table-layout: fixed;
+
 
 
   /*FONT */
@@ -171,7 +173,7 @@ table {
     left: 5%;
     top: 20%;
     position: absolute;
-    z-index: 10000;
+    z-index: 10100;
     pointer-events: auto;
     visibility: hidden;
   
@@ -255,7 +257,7 @@ table {
       color: #f6fbff; 
       font-family: 'Lucida Sans', Arial, sans-serif; 
       line-height: 26px; 
-      //text-indent: 30px; 
+      /*text-indent: 30px; */
   
       }
 
@@ -288,9 +290,12 @@ table {
         }
 
         #depiction{
-        height: 100%;
+        height: auto;
         width: 100%;
+        display: block;
+        max-height: 300px;
         object-fit: contain;
+        /*object-fit: contain;*/
         }
   
   @keyframes spin {
